--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,27 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campgrounds</title>
-</head>
-
-<body>
+<% layout('layouts/boilerplate') %>
     <h1>All Campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add Campground</a>
     </div>
-    <ul>
-        <% for( let campground of campgrounds ) { %>
-            <li>
-                <a href="/campground/<%= campground._id %> ">
-                    <%= campground.title %>
-                </a>
-            </li>
-            <% } %>
-    </ul>
-</body>
-
-</html>
+    <% for( let campground of campgrounds ) { %>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid" src="<%= campground.image %> " alt="">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= campground.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= campground.description %>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <%= campground.location %>
+                            </small>
+                        </p>
+                        <a href="/campground/<%= campground.id %>" class="btn btn-primary">View <%= campground.title %>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <% } %>
