--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('layouts/boilerplate') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show</title>
-</head>
-
-<body>
     <h1>
         <%= campground.title %>
     </h1>
     <h2>
         <%= campground.location %>
     </h2>
+    <img src="<%= campground.image %>" alt="">
+    <p>
+        <%= campground.description %>
+    </p>
     <footer>
         <a href="/campgrounds/<%= campground._id %>/edit">Edit <%= campground.title %></a>
         <br>
@@ -24,6 +19,3 @@
         <br>
         <a href="/campgrounds">All Campgrounds</a>
     </footer>
-</body>
-
-</html>
