--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,30 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Campground</title>
-</head>
-
-<body>
-    <h1>Edit <%= campground.title %>
-    </h1>
-    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
-        <div>
-            <label for="title">Title: </label>
-            <input type="text" id="title" name="campground[title]" value="<%= campground.title %>">
+<% layout('layouts/boilerplate') %>
+    <div class="row">
+        <h1 class="text-center">
+            Edit Campground
+        </h1>
+        <div class="col-6 offset-3">
+            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title: </label>
+                    <input class="form-control" type="text" id="title" name="campground[title]" autocomplete="off"
+                        value="<%= campground.title %>">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location: </label>
+                    <input class="form-control" type="text" id="location" name="campground[location]" autocomplete="off"
+                        value="<%= campground.location %>">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image Url: </label>
+                    <input class="form-control" type="text" id="image" name="campground[image]" autocomplete="off"
+                        value="<%= campground.image %>">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="price">Campground Price: </label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="price-label">$</span>
+                        <input type="text" class="form-control" id="price" name="campground[price]" aria-label="price"
+                            placeholder="0.00" aria-describedby="price-label" autocomplete="off"
+                            value="<%= campground.price %>">
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description: </label>
+                    <textarea class="form-control" type="text" id="description" name="campground[description]"
+                        autocomplete="off" rows="5"><%= campground.description %></textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-success">Save changes</button>
+                </div>
+            </form>
+            <a href="/campground/<%= campground._id %>">Back to campground</a>
         </div>
-        <div>
-            <label for="location">Location: </label>
-            <input type="text" id="location" name="campground[location]" value="<%= campground.location %>">
-        </div>
-        <button>Edit Campground</button>
-    </form>
-    <div>
-        <a href="/campground/<%= campground._id %>">Cancel</a>
     </div>
-</body>
-
-</html>
