--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,29 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Campground</title>
-</head>
-
-<body>
-    <h1>Create New Campground</h1>
-    <form action="/campgrounds" method="POST">
-        <div>
-            <label for="title">Title: </label>
-            <input type="text" id="title" name="campground[title]">
+<% layout('layouts/boilerplate') %>
+    <div class="row">
+        <h1 class="text-center">
+            New Campground
+        </h1>
+        <div class="col-6 offset-3">
+            <form action="/campgrounds" method="POST">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title: </label>
+                    <input class="form-control" type="text" id="title" name="campground[title]" autocomplete="off">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location: </label>
+                    <input class="form-control" type="text" id="location" name="campground[location]"
+                        autocomplete="off">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image Url: </label>
+                    <input class="form-control" type="text" id="image" name="campground[image]" autocomplete="off">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="price">Campground Price: </label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="price-label">$</span>
+                        <input type="text" class="form-control" id="price" name="campground[price]" aria-label="price"
+                            placeholder="0.00" aria-describedby="price-label" autocomplete="off">
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description: </label>
+                    <textarea class="form-control" type="text" id="description" name="campground[description]"
+                        autocomplete="off"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-success">Add Campground</button>
+                </div>
+            </form>
+            <a href="/campgrounds">Back to all campgrounds</a>
         </div>
-        <div>
-            <label for="location">Location: </label>
-            <input type="text" id="location" name="campground[location]">
-        </div>
-        <button>Add Campground</button>
-    </form>
-    <div>
-        <a href="/campgrounds">Back to all campgrounds</a>
     </div>
-</body>
-
-</html>
