Campground details page design

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -35,7 +35,7 @@
                         autocomplete="off" rows="5"><%= campground.description %></textarea>
                 </div>
                 <div class="mb-3">
-                    <button class="btn btn-success">Save changes</button>
+                    <button class="btn btn-warning">Save changes</button>
                 </div>
             </form>
             <a href="/campground/<%= campground._id %>">Back to campground</a>
