--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,21 +1,34 @@
 <% layout('layouts/boilerplate') %>
 
-    <h1>
-        <%= campground.title %>
-    </h1>
-    <h2>
-        <%= campground.location %>
-    </h2>
-    <img src="<%= campground.image %>" alt="">
-    <p>
-        <%= campground.description %>
-    </p>
-    <footer>
-        <a href="/campgrounds/<%= campground._id %>/edit">Edit <%= campground.title %></a>
-        <br>
-        <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-            <button>Delete <%= campground.title %></button>
-        </form>
-        <br>
-        <a href="/campgrounds">All Campgrounds</a>
-    </footer>
+    <div class="row">
+        <div class="col-6 offset-3">
+            <div class="card mb-3">
+                <img src="<%= campground.image %>" class="card-img-top" alt="<%= campground.title %>">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <%= campground.title %>
+                    </h5>
+                    <p class="card-text">
+                        <%= campground.description %>
+                    </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item text-muted">
+                        <%= campground.location %>
+                    </li>
+                    <li class="list-group-item">
+                        $<%= campground.price %>/night
+                    </li>
+                </ul>
+                <div class="card-body d-flex justify-content-between">
+                    <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-warning">Edit</a>
+                    <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                        <button class="card-link btn btn-danger">Delete</button>
+                    </form>
+                </div>
+                <div class="card-footer">
+                    <a href="/campgrounds">All Campgrounds</a>
+                </div>
+            </div>
+        </div>
+    </div>
