--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -31,14 +31,33 @@
                 </div>
             </div>
             <h2>Leave a Review:</h2>
-            <form action="" class='mb-3'>
+            <!-- <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate
+                class="validated-form mb-3">
                 <div class="mb-3">
-                    <label class='form-label' for="">Rating:</label>
-                    <input class="form-range" type="range" min=1 max=5 name="review[rating]" id="rating">
+                    <label class="form-label" for="rating">Rating</label>
+                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="body">Review:</label>
-                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+                    <label class="form-label" for="body">Review</label>
+                    <textarea class="form-control" name="review[body]" required id="body" cols="30" rows="3"></textarea>
+                    <div class="invalid-feedback">
+                        Invalid review!
+                    </div>
+                </div>
+                <button class="btn btn-success">Submit</button>
+            </form> -->
+            <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate
+                class="mb-3 validated-form">
+                <div class="mb-3">
+                    <label class="form-label" for="rating">Rating</label>
+                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="body">Review</label>
+                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <button class="btn btn-success">Submit</button>
             </form>
