--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 
     <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-6">
             <div class="card mb-3">
                 <img src="<%= campground.image %>" class="card-img-top" alt="<%= campground.title %>">
                 <div class="card-body">
@@ -30,6 +30,9 @@
                     <a href="/campgrounds">All Campgrounds</a>
                 </div>
             </div>
+        </div>
+        <div class="col-6">
+
             <h2>Leave a Review:</h2>
             <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate
                 class="mb-3 validated-form">
@@ -46,5 +49,17 @@
                 </div>
                 <button class="btn btn-success">Submit</button>
             </form>
+            <% for( let review of campground.reviews ) { %>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h6 class="card-title">
+                            Rating: <%= review.rating %>
+                        </h6>
+                        <p class="card-text">
+                            Review: <%= review.body %>
+                        </p>
+                    </div>
+                </div>
+                <% } %>
         </div>
     </div>
