added delete review

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -22,7 +22,7 @@
                                 <%= campground.location %>
                             </small>
                         </p>
-                        <a href="/campground/<%= campground.id %>" class="btn btn-primary">View <%= campground.title %>
+                        <a href="/campgrounds/<%= campground.id %>" class="btn btn-primary">View <%= campground.title %>
                         </a>
                     </div>
                 </div>
