--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -58,6 +58,10 @@
                         <p class="card-text">
                             Review: <%= review.body %>
                         </p>
+                        <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
+                            method="POST">
+                            <button class="btn btn-sm btn-danger">Delete</button>
+                        </form>
                     </div>
                 </div>
                 <% } %>
