--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -4,7 +4,7 @@
             New Campground
         </h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="POST" novalidate class="validated-form">
+            <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title: </label>
                     <input class="form-control" type="text" id="title" name="campground[title]" autocomplete="off"
@@ -21,14 +21,15 @@
                         Invalid Location!
                     </div>
                 </div>
-                <div class="mb-3">
+                <input type="file" name="image" id="" multiple>
+                <!-- <div class="mb-3">
                     <label class="form-label" for="image">Image Url: </label>
                     <input class="form-control" type="text" id="image" name="campground[image]" autocomplete="off"
                         required>
                     <div class="invalid-feedback">
                         Invalid Image Url!
                     </div>
-                </div>
+                </div> -->
                 <div class="mb-3">
                     <label class="form-label" for="price">Campground Price: </label>
                     <div class="input-group">
