--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -21,15 +21,6 @@
                         Invalid Location!
                     </div>
                 </div>
-                <input type="file" name="image" id="" multiple>
-                <!-- <div class="mb-3">
-                    <label class="form-label" for="image">Image Url: </label>
-                    <input class="form-control" type="text" id="image" name="campground[image]" autocomplete="off"
-                        required>
-                    <div class="invalid-feedback">
-                        Invalid Image Url!
-                    </div>
-                </div> -->
                 <div class="mb-3">
                     <label class="form-label" for="price">Campground Price: </label>
                     <div class="input-group">
@@ -47,6 +38,12 @@
                         autocomplete="off" required></textarea>
                     <div class="invalid-feedback">
                         Description should not be empty.
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Add Images: </label>
+                    <div class="input-group mb-3">
+                        <input type="file" class="form-control" id="image" name="image" multiple>
                     </div>
                 </div>
                 <div class="mb-3">
