--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,8 +3,28 @@
 
     <div class="row">
         <div class="col-6">
+            <div id="campgroudCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <% campground.images.forEach((img, i)=> { %>
+                        <div class="carousel-item <%= i === 0 ? " active" : '' %>">
+                            <img src="<%= img.url %>" class="d-block w-100" alt="">
+                        </div>
+                        <% }) %>
+                </div>
+                <% if (campground.images.length> 1) { %>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#campgroudCarousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#campgroudCarousel"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                    <% } %>
+            </div>
             <div class="card mb-3">
-                <img src="<%= campground.image %>" class="card-img-top" alt="<%= campground.title %>">
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= campground.title %>
