--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,13 +10,14 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 
 <body class="d-flex flex-column vh-100">
 
     <%- include('../partials/navbar') %>
 
-        <main class="container mt-5">
+        <main class="container mt-5 px-5">
             <%- include('../partials/flash') %>
                 <%- body %>
         </main>
