--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -49,6 +49,15 @@
                     </div>
                 </div>
                 <div class="mb-3">
+                    <% campground.images.forEach(function(img, i){ %>
+                        <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
+                        <div class="form-check-inline">
+                            <input type="checkbox" id="img-<%= i %>" name="deleteImages[]" value="<%= img.filename %>">
+                        </div>
+                        <label for="img-<%= i %>">Delete</label>
+                        <% }) %>
+                </div>
+                <div class=" mb-3">
                     <button class="btn btn-warning">Save changes</button>
                 </div>
             </form>
