--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -6,7 +6,7 @@
             <div id="campgroudCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i)=> { %>
-                        <div class="carousel-item <%= i === 0 ? " active" : '' %>">
+                        <div class="carousel-item show-img-container <%= i === 0 ? " active" : '' %>">
                             <img src="<%= img.url %>" class="d-block w-100" alt="">
                         </div>
                         <% }) %>
