--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,6 +3,7 @@
 
     <div class="row">
         <div class="col-6">
+            <div id='map' style='width: 100%; height: 300px;'></div>
             <div id="campgroudCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i)=> { %>
@@ -117,3 +118,9 @@
                         <% } %>
         </div>
     </div>
+
+    <script>
+        const campground = JSON.parse('<%-JSON.stringify(campground)%>');
+        const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+    </script>
+    <script src="/js/showPageMap.js"></script>
