--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,7 +7,13 @@
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid" src="<%= campground.images[0].url %> " alt="">
+                    <% if (campground.images.length) { %>
+                        <img class="img-fluid" src="<%= campground.images[0].url %>" alt="">
+                        <% } else {%>
+                            <img class="img-fluid"
+                                src="https://res.cloudinary.com/mickel/image/upload/v1622797860/YelpCamp/atuvcxsdzmvvjaowhkx7.jpg"
+                                alt="">
+                            <% }%>
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
