--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,14 +3,19 @@
 
     <div class="row">
         <div class="col-6">
-            <div id='map' style='width: 100%; height: 300px;'></div>
             <div id="campgroudCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <% campground.images.forEach((img, i)=> { %>
-                        <div class="carousel-item show-img-container <%= i === 0 ? " active" : '' %>">
-                            <img src="<%= img.url %>" class="d-block w-100" alt="">
-                        </div>
-                        <% }) %>
+                    <% if (campground.images.length) { %>
+                        <% campground.images.forEach((img, i)=> { %>
+                            <div class="carousel-item show-img-container <%= i === 0 ? " active" : '' %>">
+                                <img src="<%= img.url %>" class="d-block w-100" alt="">
+                            </div>
+                            <% }) %>
+                                <% } else {%>
+                                    <img class="img-fluid"
+                                        src="https://res.cloudinary.com/mickel/image/upload/v1622797860/YelpCamp/atuvcxsdzmvvjaowhkx7.jpg"
+                                        alt="">
+                                    <% }%>
                 </div>
                 <% if (campground.images.length> 1) { %>
                     <button class="carousel-control-prev" type="button" data-bs-target="#campgroudCarousel"
@@ -61,6 +66,7 @@
             </div>
         </div>
         <div class="col-6">
+            <div id='map' style='width: 100%; height: 300px;'></div>
             <% if (currentUser) { %>
                 <h2>Leave a Review:</h2>
                 <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate
