--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -21,7 +21,7 @@
 
     <%- include('../partials/navbar') %>
 
-        <main class="container mt-5 px-5">
+        <main class="container mt-5">
             <%- include('../partials/flash') %>
                 <%- body %>
         </main>
