--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,7 @@
 <% layout('layouts/boilerplate') %>
+
+    <div id="map" style="width: 100%; height: 500px;"></div>
+
     <h1>All Campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add Campground</a>
@@ -35,3 +38,11 @@
             </div>
         </div>
         <% } %>
+
+        <script>
+            const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+        // this will show an error but will break nothing
+            const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+        </script>
+            
+        <script src="/js/clusterMap.js"></script>
