--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="col-6">
-            <div id='map' style='width: 100%; height: 300px;'></div>
+            <div id='map'></div>
             <% if (currentUser) { %>
                 <h2>Leave a Review:</h2>
                 <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate
