form responsive style

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
         <h1 class="text-center">
             Edit Campground
         </h1>
-        <div class="col-6 offset-3">
+        <div class="col-sm-6 offset-sm-3">
             <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" class="validated-form"
                 novalidate enctype="multipart/form-data">
                 <div class="mb-3">
