--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
         <h1 class="text-center">
             New Campground
         </h1>
-        <div class="col-6 offset-3">
+        <div class="col-sm-6 offset-sm-3">
             <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title: </label>
