--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,9 +2,13 @@
 
     <div id="cluster-map"></div>
 
-    <h1>All Campgrounds</h1>
-    <div>
-        <a href="/campgrounds/new">Add Campground</a>
+    <div class="row my-3">
+        <div class="col-12 col-md-6 display-6 d-flex align-items-center my-2 my-md-0 justify-content-center justify-content-md-start">
+            All Campgrounds
+        </div>
+        <div class="col-12 col-md-6 d-flex align-items-center my-2 my-md-0 justify-content-center justify-content-md-end">
+            <a href="/campgrounds/new" class="btn btn-success">+ Add Campground</a>
+        </div>
     </div>
     <% for( let campground of campgrounds ) { %>
         <div class="card mb-3">
@@ -39,10 +43,10 @@
         </div>
         <% } %>
 
-        <script>
-            const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-        // this will show an error but will break nothing
-            const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
-        </script>
-            
-        <script src="/js/clusterMap.js"></script>
+            <script>
+                const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+                // this will show an error but will break nothing
+                const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+            </script>
+
+            <script src="/js/clusterMap.js"></script>
