--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 
 <body class="d-flex text-center text-white bg-dark">
 
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <div class="cover-md-container d-flex w-100 h-100 p-3 justify-content-center flex-column">
         <header class="mb-auto">
             <div>
                 <h3 class="float-md-left mb-0">YelpCamp</h3>
@@ -36,7 +36,7 @@
             <h1>YelpCamp</h1>
             <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
                 Feel free to share some of your own and comment on others!</p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
+            <a href="/campgrounds" class="btn btn-md btn-secondary font-weight-bold border-white bg-white">View
                 Campgrounds</a>
         </main>
 
