--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -61,7 +61,7 @@
                     <button class="btn btn-warning">Save changes</button>
                 </div>
             </form>
-            <a href="/campground/<%= campground._id %>">Back to campground</a>
+            <a href="/campgrounds/<%= campground._id %>">Back to campground</a>
         </div>
     </div>
 
