--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -13,16 +13,16 @@
                                 <label class="form-label" for="username">Username</label>
                                 <input class="form-control" type="text" id="username" name="username" autofocus
                                     required>
-                                <div class="valid-feedback">
-                                    Looks good!
+                                <div class="invalid-feedback">
+                                    Invalid Username!
                                 </div>
                             </div>
 
                             <div class="mb-3">
                                 <label class="form-label" for="password">Password</label>
                                 <input class="form-control" type="password" id="password" name="password" required>
-                                <div class="valid-feedback">
-                                    Looks good!
+                                <div class="invalid-feedback">
+                                    Invalid Password!
                                 </div>
                             </div>
                             <button class="btn btn-success btn-block">Login</button>
