--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -12,22 +12,22 @@
                                 <label class="form-label" for="username">Username</label>
                                 <input class="form-control" type="text" id="username" name="username" required
                                     autofocus>
-                                <div class="valid-feedback">
-                                    Looks good!
+                                <div class="invalid-feedback">
+                                    Invalid Username!
                                 </div>
                             </div>
                             <div class="mb-3">
                                 <label class="form-label" for="email">Email</label>
                                 <input class="form-control" type="email" id="email" name="email" required>
-                                <div class="valid-feedback">
-                                    Looks good!
+                                <div class="invalid-feedback">
+                                    Invalid Email!
                                 </div>
                             </div>
                             <div class="mb-3">
                                 <label class="form-label" for="password">Password</label>
                                 <input class="form-control" type="password" id="password" name="password" required>
-                                <div class="valid-feedback">
-                                    Looks good!
+                                <div class="invalid-feedback">
+                                    Invalid Password!
                                 </div>
                             </div>
                             <button class="btn btn-success btn-block">Register</button>
